# rsmycqu

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  CHANGELOG.md  Cargo.toml  readme.md
.github/workflows/: ci.yml  release-plz.yml
src/: lib.rs
src/card/: card.rs  dorm.rs  mod.rs  utils.rs
src/card/tests/: mod.rs  page_ticket_html.html
src/errors/: card.rs  mod.rs  mycqu.rs  page_parser.rs  session.rs  sso.rs
src/mycqu/: exam.rs  mod.rs  score.rs  tests.rs
src/mycqu/course/: course.rs  course_day_time.rs  course_timetable.rs  cqu_session.rs  cqu_session_info.rs  mod.rs
src/mycqu/enroll/: enroll_course_info.rs  enroll_course_item.rs  enroll_course_timetable.rs  mod.rs
src/mycqu/tests/: course.rs  course_timetable.json  enroll.rs  exam.rs  mod.rs
src/mycqu/utils/: access.rs  encrypt.rs  mod.rs
src/session/: access_info.rs  client.rs  mod.rs
src/sso/: encrypt.rs  mod.rs  tests.rs  tools.rs
src/utils/: consts.rs  datetimes.rs  encrypt.rs  macros.rs  mod.rs  models.rs  test_fixture.rs  test_tools.rs
src/utils/page_parser/: mod.rs  sso_parser.rs
src/utils/page_parser/tests/: card_access_page.html  error.html  mod.rs  sso_error_page.html  sso_login_page.html
tests/: test_encrypt.rs
